updated typecriptconfig for build stuff

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
   --beige: #F5F1E8;
   --gray-dark: #2A2A2A;
   --gray: #666666;
-  --gray-light: #CCCCCC;
+  --gray-light: #878686;
   --text-primary: #0A0A0A;
   --text-secondary: #666666;
 }
